include_HEADERS=                         \
	http/easy_http_handler.h         \
	http/http_parser.h               \
	easy_simple_handler.h            \
	easy_tbnet.h                     \
	easy_kfc_handler.h               

noinst_LTLIBRARIES=libeasy_packet.la
libeasy_packet_la_SOURCES =              \
	http/easy_http_handler.c         \
	http/http_parser.c               \
	easy_kfc_handler.c               
