noinst_LTLIBRARIES=libeasy_util.la
include_HEADERS =           \
    easy_buf.h              \
    easy_hash.h             \
    easy_pool.h             \
    easy_string.h           \
    easy_inet.h             \
    easy_time.h             \
    easy_array.h

libeasy_util_la_SOURCES =   \
    easy_buf.c              \
    easy_hash.c             \
    easy_pool.c             \
    easy_string.c           \
    easy_inet.c             \
    easy_time.c             \
    easy_array.c
